<resources>

    <string name="app_name">Weather forecast for Estonia</string>
    <string name="forecast_day">Day weather forecast: </string>
    <string name="lang">English</string>
    <string name="forecast_night">Night weather forecast: </string>
    <string name="temp_range">Temperature range: </string>
    <string name="weather_for_day">Weather forecast for:</string>
    <string name="forecast_city">Weather forecast for the city</string>
    <string name="no_info">No info</string>
    <string name="clear">Clear</string>
    <string name="few_clouds">Few clouds</string>
    <string name="variable_clouds">Variable clouds</string>
    <string name="cloudy_with_clear_spells">Cloudy with clear spells</string>
    <string name="cloudy">Cloudy</string>
    <string name="light_rain">Light rain</string>
    <string name="moderate_rain">Moderate rain</string>
    <string name="heavy_rain">Heavy rain</string>
    <string name="light_sleet">Light sleet</string>
    <string name="moderate_sleet">Moderate sleet</string>
    <string name="light_snow_shower">Light snow shower</string>
    <string name="moderate_snow_shower">Moderate snow shower</string>
    <string name="light_shower">Light shower</string>
    <string name="moderate_shower">Moderate shower</string>
    <string name="heavy_shower">Heavy shower</string>
    <string name="hail">Hail</string>
    <string name="mist">Mist</string>
    <string name="fog">Fog</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="thunder">Thunder</string>
    <string name="no_database">Unfortunately,you don\'t have any saved data on the application.
        Try to run it later when you\'ll have an ability to connect to the Internet</string>

</resources>
