<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/FloralWhite"
        android:layout_gravity="center"
        android:layout_margin="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <TextView
                android:id="@+id/txtdaycaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                android:text="@string/weather_for_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txtdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toEndOf="@+id/txtdaycaption"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtdayforecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:text="@string/forecast_day"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtdate" />

            <TextView
                android:id="@+id/txtphenomenon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtdayforecast" />

            <ImageView
                android:id="@+id/imgday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_size_top"
                android:layout_marginEnd="@dimen/margin_size"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txttempmincaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                android:text="@string/temp_range"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtphenomenon" />

            <TextView
                android:id="@+id/txttempmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toEndOf="@+id/txttempmincaption"
                app:layout_constraintTop_toBottomOf="@+id/txtphenomenon" />

            <TextView
                android:id="@+id/txttempmax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toEndOf="@+id/txttempmin"
                app:layout_constraintTop_toBottomOf="@+id/txtphenomenon" />

            <TextView
                android:id="@+id/txttext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginEnd="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txttempmin" />

            <TextView
                android:id="@+id/txtpeipsi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginEnd="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txttext" />

            <TextView
                android:id="@+id/txtsea"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginEnd="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtpeipsi" />

            <TextView
                android:id="@+id/txtnightcaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:text="@string/forecast_night"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtsea" />

            <TextView
                android:id="@+id/txtnightphenomenon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtnightcaption" />

            <ImageView
                android:id="@+id/imgnight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/margin_size"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtsea" />

            <TextView
                android:id="@+id/txtnighttempcaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_range"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtnightphenomenon"/>

            <TextView
                android:id="@+id/txtnighttempmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toEndOf="@+id/txtnighttempcaption"
                app:layout_constraintTop_toBottomOf="@+id/txtnightphenomenon" />

            <TextView
                android:id="@+id/txtnighttempmax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toEndOf="@+id/txtnighttempmin"
                app:layout_constraintTop_toBottomOf="@+id/txtnightphenomenon" />

            <TextView
                android:id="@+id/txtnightsea"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginEnd="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtnighttext" />

            <TextView
                android:id="@+id/txtnighttext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginEnd="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtnighttempmin" />

            <TextView
                android:id="@+id/txtnightpeipsi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size"
                android:layout_marginEnd="@dimen/margin_size"
                android:layout_marginTop="@dimen/margin_size"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtnightsea" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>